// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /orders creates and returns a order 1`] = `
Object {
  "created_at": Any<String>,
  "customer_id": Any<String>,
  "id": Any<Number>,
  "state": "draft",
  "time_slot_id": Any<String>,
  "updated_at": Any<String>,
  "uuid": Any<String>,
}
`;

exports[`POST /orders creates and returns a order using internal customer_id 1`] = `
Object {
  "created_at": Any<String>,
  "customer_id": Any<String>,
  "id": Any<Number>,
  "state": "draft",
  "time_slot_id": Any<String>,
  "updated_at": Any<String>,
  "uuid": Any<String>,
}
`;

exports[`POST /orders throws validation error for not existing customer_id 1`] = `
Array [
  Object {
    "instancePath": "/customer_id",
    "keyword": "type",
    "message": "must be integer",
    "params": Object {
      "type": "integer",
    },
    "schemaPath": "defs#/definitions/id_or_uuid/anyOf/0/type",
  },
  Object {
    "instancePath": "/customer_id",
    "keyword": "format",
    "message": "must match format \\"uuid\\"",
    "params": Object {
      "format": "uuid",
    },
    "schemaPath": "defs#/definitions/id_or_uuid/anyOf/1/format",
  },
  Object {
    "instancePath": "/customer_id",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "defs#/definitions/id_or_uuid/anyOf",
  },
]
`;

exports[`POST /orders throws validation error for not existing time_slot_id 1`] = `
Array [
  Object {
    "instancePath": "/time_slot_id",
    "keyword": "type",
    "message": "must be integer",
    "params": Object {
      "type": "integer",
    },
    "schemaPath": "defs#/definitions/id_or_uuid/anyOf/0/type",
  },
  Object {
    "instancePath": "/time_slot_id",
    "keyword": "format",
    "message": "must match format \\"uuid\\"",
    "params": Object {
      "format": "uuid",
    },
    "schemaPath": "defs#/definitions/id_or_uuid/anyOf/1/format",
  },
  Object {
    "instancePath": "/time_slot_id",
    "keyword": "anyOf",
    "message": "must match a schema in anyOf",
    "params": Object {},
    "schemaPath": "defs#/definitions/id_or_uuid/anyOf",
  },
]
`;

exports[`POST /orders throws validation error for required properties 1`] = `
Array [
  Object {
    "instancePath": "",
    "keyword": "required",
    "message": "must have required property 'customer_id'",
    "params": Object {
      "missingProperty": "customer_id",
    },
    "schemaPath": "#/required",
  },
  Object {
    "instancePath": "",
    "keyword": "required",
    "message": "must have required property 'time_slot_id'",
    "params": Object {
      "missingProperty": "time_slot_id",
    },
    "schemaPath": "#/required",
  },
]
`;

exports[`POST /orders throws validation error with additional properties 1`] = `
Array [
  Object {
    "instancePath": "",
    "keyword": "additionalProperties",
    "message": "must NOT have additional properties",
    "params": Object {
      "additionalProperty": "created_at",
    },
    "schemaPath": "#/additionalProperties",
  },
]
`;
